collision detection and apples

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
     <div id="game-container"></div>
     <div id="ui-container">
+        <div id="crosshair"></div>
+        <div id="wall-distance-dial">
+            <span id="wall-distance-value">--</span>
+            <span class="dial-unit">m</span>
+        </div>
         <div id="hud">
             <div class="stat">Level: <span id="level">1</span></div>
             <div class="stat">Score: <span id="score">0</span></div>
